--- a/css/css.css
+++ b/css/css.css
@@ -15,22 +15,71 @@ h3{
 }
 
 #nav{
-    background-color: #FFFFFF;
+    background-color: #FFF;
     position: fixed;
     width: 100%;
     top: 0;
      border: 2px solid #DDD;
+     -webkit-box-shadow: -1px 4px 5px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 4px 5px -1px rgba(0,0,0,0.75);
+box-shadow: -1px 4px 5px -1px rgba(0,0,0,0.75);
      z-index: 1;
 }
 #nav-wrapper{
-    width: 100%;
+    width: 990px;
     margin: 0 auto;
     text-align: center;
-   //: #DDD;
+    float:left;
+   //background-color: #DDD;
     
 }
+#Logo{
+    width:300px;
+    height: 50px;
+    background-color:#FFF;
+    float:left;
+    margin:15px;
+}
+#search
+{
+    width: 500px;
+    height: 100px;
+    //background-color:#DDD;
+    float: right;
+    
+}
+#search-box{
+    width: 400px;
+    height: 60px;
+   //  background-color:#FFF;
+     float: left;
+     margin: 20px 0 0 70px;
+}
+#txtSearch{
+     padding: 13px ;
+    width:250px;
+     border-radius: 8px 8px 8px 8px;
+    -moz-border-radius: 8px 8px 8px 8px;
+    -webkit-border-radius: 8px 8px 8px 8px;
+    background:  96% center no-repeat;
+   border-color: #0099cc;
+    text-align: left;
+    background-image:url(../img/search32x32.png)  ;
+}
+#btnsearch{
+ 
+   
+    padding: 13px ;
+    width:100px;
+     border-radius: 8px 8px 8px 8px;
+    -moz-border-radius: 8px 8px 8px 8px;
+    -webkit-border-radius: 8px 8px 8px 8px;
+    background:  96% center no-repeat #ffbd55;
+    
 
-
+    text-align: center;
+    color: white;
+}
 #nav ul li{
     display: inline-block;
     //border: 2px solid #DDD;
@@ -81,7 +130,7 @@ h3{
     padding: 15px ;
     margin: 5px 5px 5px 5px;
     float: left; 
-    margin: 70px 0 0 0;
+    margin: 82px 0 0 0;
     height: 0 auto;
     
 }
@@ -135,9 +184,10 @@ h3{
 
 #Pro-show{
     width: 990px;
-    height: 0 auto;
+    height: auto ;
     background-color:#FFF;
-     border: 1px solid #DDD;
+    border: 1px solid #DDD;
+   
 }
 #Pro-title{
     padding:  15px;
@@ -161,25 +211,26 @@ h3{
      border-radius: 8px 8px 8px 8px;
     -moz-border-radius: 8px 8px 8px 8px;
     -webkit-border-radius: 8px 8px 8px 8px;
-    border: 1px solid #DDD;
+    border: 1px solid #75bdd1;
 }
 .Pro-Box{
     width: 200px;
     height: 0 auto;
-    border: 1px solid #DDD;
-     //background-color:#DDD;
-     margin: 15px;
+   // border: 1px solid #DDD;
+    margin: 15px 20px 25px 25px ;
+    float:left;
 }
 .imagBox{
     width: 190px;
    height: 0 auto;
-     border: 1px solid #DDD;
+     //border: 1px solid #DDD;
      margin: 5px;
+    // float: left;
 }
 .ImagBox-Dec {
     width: 190px;
     height: 0 auto;
-    border: 1px solid #DDD;
+   // border: 1px solid #DDD;
     margin: 5px;
     font-size: 12px;
     color:#4099ff;
@@ -187,11 +238,83 @@ h3{
 .Pro-btnView{
     width: 190px;
    height: 0 auto;
-    border: 1px solid #DDD;
+   // border: 1px solid #DDD;
      margin: 5px;
     
 }
 .mybtn{
     width: 190px;
      height: 30px;
+}
+#Otherllogo{
+    width: 990px;
+    height: 0 auto;
+    border: 1px solid #DDD;
+    float: left;
+    margin: 5px 0 5px 0px ;
+    
+}
+#Otherllogo-header{
+    width: 980px;
+    height: 50px;
+    background-color: #FFF;
+    float: left;
+    padding: 5px;
+    text-align: left;
+    
+}
+#Sponsor{
+    float: left;
+    height: 0 auto;
+    margin: 15px 20px 25px 25px ;
+    
+}
+.Pro-Privouse{
+      width: 990px;
+    height: 40px;
+    background-color: #FFF;
+     border: 1px solid #DDD;
+     border-radius: 8px 8px 8px 8px;
+    -moz-border-radius: 8px 8px 8px 8px;
+    -webkit-border-radius: 8px 8px 8px 8px;
+    border: 1px solid #75bdd1;
+    //float:right;
+}
+#Wrap-Privousbtn{
+    width: 990px;
+    height: 35px;
+    //float: left;
+   // background-color: #DDD;
+}
+#btnNext{
+    float:right;
+    margin: 5px;
+    padding: 5px ;
+    width:70px;
+     border-radius: 8px 8px 8px 8px;
+    -moz-border-radius: 8px 8px 8px 8px;
+    -webkit-border-radius: 8px 8px 8px 8px;
+    background:  96% center no-repeat;
+   // background-color: #6897bb;
+    text-align: left;
+}
+#btnPrivous{
+    float:left;
+    margin: 5px;
+    padding: 5px ;
+    width:90px;
+     border-radius: 8px 8px 8px 8px;
+    -moz-border-radius: 8px 8px 8px 8px;
+    -webkit-border-radius: 8px 8px 8px 8px;
+    background:  96% center no-repeat;
+   // background-color: #6897bb;
+    text-align: left;
+}
+#btnPrivous:hover{
+    
+    background-color: #75bdd1;
+}
+#btnNext:hover{
+    
+    background-color: #75bdd1;
 }
