--- a/css/styles.css
+++ b/css/styles.css
@@ -108,10 +108,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#36a2c9', end
   border-bottom: none;
 }
 #cssmenu > ul > li.has-sub > a span {
-  background: url(../images/icon_plus.png) 96% center no-repeat;
+ // background: url(../images/icon_plus.png) 96% center no-repeat;
 }
 #cssmenu > ul > li.has-sub.active > a span {
-  background: url(../images/icon_minus.png) 96% center no-repeat;
+ // background: url(../images/icon_minus.png) 96% center no-repeat;
 }
 /* Sub menu */
 #cssmenu ul ul {
